[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player/PrimaryStateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player/SecondaryStateMachine.gd" type="Script" id=3]
[ext_resource path="res://Animations/Player/Fall.tres" type="Animation" id=4]
[ext_resource path="res://Sprites/Player/Steer.png" type="Texture" id=5]
[ext_resource path="res://Animations/Player/FrontDeath.tres" type="Animation" id=6]
[ext_resource path="res://Animations/Player/Jump.tres" type="Animation" id=7]
[ext_resource path="res://Animations/Player/Slide.tres" type="Animation" id=8]
[ext_resource path="res://Sprites/Player/Idle1.png" type="Texture" id=9]
[ext_resource path="res://Animations/Player/Blow.tres" type="Animation" id=10]
[ext_resource path="res://Animations/Player/Break.tres" type="Animation" id=11]
[ext_resource path="res://Sprites/Player/Idle2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/DieBack.png" type="Texture" id=13]
[ext_resource path="res://Animations/Player/BackFall.tres" type="Animation" id=14]
[ext_resource path="res://Animations/Player/Crouch.tres" type="Animation" id=15]
[ext_resource path="res://Audio/StartShot.wav" type="AudioStream" id=16]
[ext_resource path="res://Animations/Player/FrontFall.tres" type="Animation" id=17]
[ext_resource path="res://Animations/Player/None.tres" type="Animation" id=18]
[ext_resource path="res://Sprites/Player/Lose.png" type="Texture" id=19]
[ext_resource path="res://Animations/Player/Lose.tres" type="Animation" id=20]
[ext_resource path="res://Audio/RollerJump.wav" type="AudioStream" id=21]
[ext_resource path="res://Audio/RollerFall.wav" type="AudioStream" id=22]
[ext_resource path="res://Audio/RollerBreaking.wav" type="AudioStream" id=23]
[ext_resource path="res://Audio/RollerRolling.wav" type="AudioStream" id=24]
[ext_resource path="res://Sprites/Player/DieFront.png" type="Texture" id=25]
[ext_resource path="res://Audio/StartBip.wav" type="AudioStream" id=26]
[ext_resource path="res://Audio/Pushback.wav" type="AudioStream" id=27]
[ext_resource path="res://Audio/HitObstacle.wav" type="AudioStream" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 14 )

[sub_resource type="Animation" id=2]
resource_name = "BackDeath"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSpritePrimary:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSpritePrimary:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSpritePrimary:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSpritePrimary:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerSpriteSecondary:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_idle"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSpritePrimary:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 9 ), ExtResource( 12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSpritePrimary:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSpritePrimary:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.1, 3.2, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 1, 2, 3, 4 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("StartBip")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 26 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 26 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 26 )
} ],
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSpritePrimary:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 19 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSpritePrimary:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSpritePrimary:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSpritePrimary:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSpritePrimary:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSpritePrimary:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5, 17 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18, 25 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 18, 20 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
z_index = 4
z_as_relative = false
collision_mask = 132
script = ExtResource( 1 )
weightUp = 600.0
weightDown = 1500.0
maxSpeed = 400.0
acceleration = 5.0
jumpForce = 320.0
pushbackForce = Vector2( 50, 150 )
slowdownForce = 50.0

[node name="PlayerSpritePrimary" type="Sprite" parent="."]
texture = ExtResource( 13 )
hframes = 5

[node name="PlayerSpriteSecondary" type="Sprite" parent="."]
visible = false
texture = ExtResource( 25 )
hframes = 5

[node name="PlayerBox" type="CollisionShape2D" parent="."]
position = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="PrimaryStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PrimaryAnimationPlayer" type="AnimationPlayer" parent="."]
anims/BackDeath = SubResource( 2 )
anims/Fall = ExtResource( 4 )
anims/FrontDeath = ExtResource( 6 )
anims/Idle = SubResource( 3 )
anims/Jump = ExtResource( 7 )
anims/Lose = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/Slide = ExtResource( 8 )
anims/Win = ExtResource( 20 )
__meta__ = {
"_editor_description_": ""
}

[node name="SecondaryStateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="SecondaryAnimationPlayer" type="AnimationPlayer" parent="."]
anims/BackFall = ExtResource( 14 )
anims/Blow = ExtResource( 10 )
anims/Break = ExtResource( 11 )
anims/Crouch = ExtResource( 15 )
anims/FrontFall = ExtResource( 17 )
anims/None = ExtResource( 18 )
__meta__ = {
"_editor_description_": ""
}

[node name="GroundDetectionBox" type="Area2D" parent="." groups=[
"Foot",
]]
collision_layer = 2
collision_mask = 4

[node name="GroundDetectionBox" type="CollisionShape2D" parent="GroundDetectionBox"]
modulate = Color( 0.168627, 0.815686, 0.0784314, 1 )
position = Vector2( 2, 20 )
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="." groups=[
"Hurtbox",
]]
collision_layer = 16
collision_mask = 8

[node name="Hurtbox" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0, 0.133333, 1, 1 )
position = Vector2( 2, 5 )
shape = SubResource( 7 )

[node name="ObstacleDetectionFront" type="Area2D" parent="."]
position = Vector2( 25, 10 )
collision_layer = 64
collision_mask = 8

[node name="ObstacleDetectionFront" type="CollisionShape2D" parent="ObstacleDetectionFront"]
shape = SubResource( 8 )

[node name="ObstacleDetectionBack" type="Area2D" parent="."]
position = Vector2( -25, 10 )
collision_layer = 64
collision_mask = 8

[node name="ObstacleDetectionBack" type="CollisionShape2D" parent="ObstacleDetectionBack"]
shape = SubResource( 9 )

[node name="PlayerCamera" type="Camera2D" parent="."]
offset = Vector2( 150, -200 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_top = -1
limit_bottom = 1

[node name="PushbackTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="BreakTimer" type="Timer" parent="."]
autostart = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
volume_db = 15.0
pitch_scale = 0.8
bus = "FX"

[node name="Fall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
volume_db = 15.0
pitch_scale = 0.8
bus = "FX"

[node name="Break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
volume_db = 15.0
bus = "FX"

[node name="Roll" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = 15.0
bus = "FX"

[node name="StartBip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
volume_db = 24.0
bus = "FX"

[node name="StartShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = 24.0
bus = "FX"

[node name="Pushback" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 27 )
volume_db = 15.0
bus = "FX"

[node name="HitObstacle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 28 )
volume_db = 15.0
bus = "FX"

[connection signal="body_entered" from="GroundDetectionBox" to="." method="_on_GroundDetectionBox_body_entered"]
[connection signal="body_exited" from="GroundDetectionBox" to="." method="_on_GroundDetectionBox_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="ObstacleDetectionFront" to="." method="_on_ObstacleDetectionFront_area_entered"]
[connection signal="area_entered" from="ObstacleDetectionBack" to="." method="_on_ObstacleDetectionBack_area_entered"]
[connection signal="timeout" from="PushbackTimer" to="." method="_on_PushbackTimer_timeout"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
